minor additions in outreaches and a skeleton of admin panel added

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,7 +35,7 @@
 
     gtag('config', 'G-VRPRWBRW80');
   </script>
-  <title>GaNIT School</title>
+  <title>GANIT School</title>
 </head>
 
 <body>
